# controller/routes_set.js
@@ -93,7 +93,7 @@ const updateRoute = async (req, res) => {
       grade: req.body.grade,
       route_setter_id: req.body.route_setter_id,
       definition: req.body.definition,
-      color: req.body.color,
+      color: req.body.color
     }
 
     const routeId = new ObjectId(req.params.id);
@@ -111,9 +111,29 @@ const updateRoute = async (req, res) => {
   }
 };
 
+// create route
+const createRoute = async (req, res) => {
+  try{
+    const route = {
+      name: req.body.name,
+      grade: req.body.grade,
+      route_setter_id: req.body.route_setter_id,
+      definition: req.body.definition,
+      color: req.body.color
+    };
+    const response = await mongodb.getDb().db().collection('routes_set').insertOne(route);
+    if (response.acknowledge) {
+      res.status(201).json(response);
+    };
+    }catch (error) {
+      errorHandling(res, error);
+  }
+}
+
   module.exports = {
     getAllRoutes,
     getOneRoute,
     updateRoute,
-    getLogin
+    getLogin,
+    createRoute
   };
